# matrix-lib

./: Cargo.toml  INSTALL.md  INSTALL_GITHUB.md  LICENSE  PYTHON_README.md  build_python.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-wheels.yml
examples/: ndarray_demo.rs  python_example.py
src/: lib.rs  main.rs  python_bindings.rs
src/utils/: matrix.rs  mod.rs  ndarray.rs
tests/: test_python_bindings.py
