[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "matrix-lib-python"
version = "0.1.0"
description = "High-performance matrix and n-dimensional array library with Python bindings"
readme = "PYTHON_README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["matrix", "linear-algebra", "math", "mathematics", "numpy", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/code-wolf-byte/matrix-lib"
Documentation = "https://github.com/code-wolf-byte/matrix-lib/blob/main/PYTHON_README.md"
Repository = "https://github.com/code-wolf-byte/matrix-lib"
"Bug Tracker" = "https://github.com/code-wolf-byte/matrix-lib/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "numpy>=1.20",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.maturin]
features = ["pyo3/extension-module"] 